---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_mlir_fail_todo/map_state.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
pub mod defs {
    use super::*;
    pub use arc_script::arcorn;
    pub use arc_script::arcorn::state::{ArcMapOps, ArcRefOps, ArcSetOps, ArcVecOps};
    pub use arcon::prelude::*;
    pub struct MapCount<'i, 'source, 'timer, 'channel, B: Backend, C: ComponentDefinition> {
        pub data: &'i mut MapCountData,
        pub ctx: &'i mut OperatorContext<'source, 'timer, 'channel, MapCountData, B, C>,
        pub timestamp: Option<u64>,
        pub key: u64,
    }
    pub struct MapCountData {
        pub state: MapCountState,
    }
    #[derive(ArconState)]
    pub struct MapCountState {
        pub c_0: arc_script::arcorn::state::ArcMap<i32, i32, Sled>,
    }
    impl StateConstructor for MapCountState {
        type BackendType = Sled;
        fn new(backend: Arc<Self::BackendType>) -> Self {
            Self {
                c_0: <arc_script::arcorn::state::ArcMap<i32, i32, Sled>>::arc_map_default(
                    "c_0",
                    backend.clone(),
                )
                .unwrap(),
            }
        }
    }
    impl MapCountData {
        fn new() -> OperatorBuilder<MapCountData> {
            OperatorBuilder {
                constructor: Arc::new(move |backend| MapCountData {
                    state: MapCountState {
                        c_0: <arc_script::arcorn::state::ArcMap<i32, i32, Sled>>::arc_map_new(
                            "c_0",
                            backend.clone(),
                            {
                                let y_1_0 = <::std::collections::HashMap<i32, i32>>::new();
                                y_1_0
                            },
                        )
                        .unwrap(),
                    },
                }),
                conf: Default::default(),
            }
        }
    }
    impl Operator for MapCountData {
        type IN = Struct3keyi323vali32End;
        type OUT = Struct3keyi323vali32End;
        type TimerState = ArconNever;
        type OperatorState = MapCountState;
        fn handle_element(
            &mut self,
            element: ArconElement<Self::IN>,
            ref mut ctx: OperatorContext<Self, impl Backend, impl ComponentDefinition>,
        ) -> OperatorResult<()> {
            let ArconElement { timestamp, data } = element;
            let mut task = MapCount {
                data: self,
                ctx,
                timestamp,
                key: data.get_key(),
            };
            task.handle_element(data);
            Ok(())
        }
        fn state(&mut self) -> &mut Self::OperatorState {
            &mut self.state
        }
        fn handle_timeout(
            &mut self,
            timeout: Self::TimerState,
            ref mut ctx: OperatorContext<Self, impl Backend, impl ComponentDefinition>,
        ) -> OperatorResult<()> {
            Ok(())
        }
        fn persist(&mut self) -> OperatorResult<()> {
            self.state.persist();
            Ok(())
        }
    }
    impl<'i, 'source, 'timer, 'channel, B: Backend, C: ComponentDefinition>
        MapCount<'i, 'source, 'timer, 'channel, B, C>
    {
        fn handle_element(&mut self, x_0: Struct3keyi323vali32End) -> OperatorResult<()> {
            {
                let y_1_0 = x_0.val;
                let y_1_1 = x_0.key;
                let y_1_2 = self.data.state.c_0.arc_map_get_unchecked(y_1_0).unwrap();
                let y_1_3 = 1i32;
                let y_1_4 = y_1_2 + y_1_3;
                let y_1_5 = self.data.state.c_0.arc_map_get_unchecked(y_1_0).unwrap();
                let y_1_6 = Struct3keyi323vali32End {
                    val: y_1_5,
                    key: y_1_1,
                };
                let y_1_7 = self.data.state.c_0.arc_map_insert(y_1_0, y_1_4).unwrap();
                self.emit(y_1_6);
                y_1_7
            };
            Ok(())
        }
        fn emit(&mut self, data: Struct3keyi323vali32End) {
            let element = ArconElement {
                data,
                timestamp: self.timestamp,
            };
            self.ctx.output(element);
        }
    }
    #[arcorn::rewrite]
    #[derive(Copy)]
    pub struct Struct3keyi323vali32End {
        key: i32,
        val: i32,
    }
}
pub use defs::*;


